# Picross

./: .gitignore  CMakeLists.txt  CrssPcrss.cpp  Makefile  Picross.h  README.md  dat_stack.h  dat_table.h  data.h  main.cpp  pixel.h  table.h
src/: Brck.cpp  Brck.h  Brick.cpp  Brick.h  BrickField.cpp  BrickField.h  Dat_stack.cpp  Dat_stack.h  Dat_table.cpp  Dat_table.h  Data.cpp  Data.h  DataField.cpp  DataField.h  DataFieldTest.cpp  DataStack.h  DataTable.h  Field.cpp  Field.h  Picross.cpp  Picross.h  Pixel.cpp  Pixel.h  Table.cpp  Table.h  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  structs.h
